Update README.md
Updated README file to the new one which has the same changes done as the one in the main page